# TGS-2024052081-Automate-Video-and-Voice-AI-Agents-with-n8n

./: .gitignore  LEARNER_GUIDE.md  LEARNER_GUIDE_CLOUD.md  LEARNER_GUIDE_LOCAL.md  README.md
.claude/scripts/: tms_assessment.py
courseware/: LG-Automate-Video-and-Voice-AI-Agents-with-n8n.md  LP-Automate-Video-and-Voice-AI-Agents-with-n8n.docx  LP-Automate-Video-and-Voice-AI-Agents-with-n8n.md
lab0/: docker-compose.yml
lab1/: ai-agent-ollama.json
lab10/: veo3-video-flow.json
lab10/website/: index.html  main.js  start.bat
lab2/: rag-flow.json
lab3/: CX Agent with RAG.json
lab3/website/: index.html  script.js  start.command  styles.css
lab4/: README.md  retell-booking-tools-flow.json  retell-web-call-flow.json
lab4/knowledge-base/: build_kb_pdf.py
lab4/website/: index.html  main.js  styles.css
lab5/: README.md  ava-assistant-prompt.md  heygen-news-avatar-flow.json  vapi-faq-flow.json
lab5-opensource/: README.md  os-news-avatar-flow.json  start.bat  start.command
lab5-opensource/service/: render_service.py
lab5-opensource/website/: index.html  main.js
lab5/website/: index.html  main.js  start.bat  start.command  (+1 more)
lab6/: setup.sh
lab7/: heygen-news-avatar-flow.json  replicate-avatar-flow.json
lab7-opensource/: .gitignore  os-news-avatar-flow.json  start.bat
lab8/: avatar-chat-flow.json
lab9/: liveavatar-session-flow.json
labs_remote_n8n/lab6/: pyproject.toml  setup.sh  start.bat  start.command
labs_remote_n8n/lab6/js/: app.js
labs_remote_n8n/lab6/python/: app.py  musetalk_engine.py
scripts/: generate_agentic_courseware.py
(+137 files in other folders)
