[project]
name = "digital-human-studio"
version = "2.0.0"
description = "Upload an avatar and a script; get TTS and lip sync. Browser engine for live preview, MuseTalk for photoreal rendering."
requires-python = ">=3.10,<3.13"

dependencies = [
    # web
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "python-multipart>=0.0.9",

    # MuseTalk
    "torch>=2.2",
    "torchvision",
    "diffusers==0.30.2",
    "transformers==4.39.2",
    "accelerate",
    "librosa",
    "soundfile",
    "omegaconf",
    "einops",
    "opencv-python",
    "mediapipe",
    "huggingface_hub[cli]",
]

[tool.uv]
package = false
